# games

./: readme.md
decide_film/: Cargo.toml  readme.md
decide_film/src/: main.rs
flappybird/: Cargo.toml  readme.md
flappybird/src/: main.rs
flappybird/src/functions/: bird.rs  components.rs  mod.rs  pipes.rs  setup.rs  window.rs
rubiks_cube/: Cargo.toml  readme.md
rubiks_cube/src/: main.rs
snake/src/: main.rs
snake/src/systems/: tail.rs
typing/: Cargo.toml
typing/src/: main.rs
