[package]
name = "flappybird"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = "0.14.0"
bevy-inspector-egui = { version = "0.25.2", optional = true }
bevy_embedded_assets = "0.11.0"
rand = "0.8.5"