[package]
name = "typing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", features = ["bevy_sprite"] }
bevy_embedded_assets = "0.10.0"
bevy-inspector-egui = { version = "0.24", optional = true }
rand = "0.8.5"